3 June 2022: Wouter
	- makedist.sh picks up 32bit libssp-0.dll when 32bit compile.

27 May 2022: Wouter
	- Fix #684: [FTBS] configure script error with libmnl on openSUSE 15.3 (and possibly other distributions)
	- Version is set to 1.16.0 for release. Release tag 1.16.0rc1. This
	  became release 1.16.0 on 2 June 2022. The source code branch
	  continues with version 1.16.1 under development.

20 May 2022: Wouter
	- Fix to silence test for ede error output to the console from the
	  test setup script.
	- Fix ede test to not use default pidfile, and use local interface.
	- Fix some lint type warnings.

18 May 2022: George
	- Fix typos in config_set_option for the 'num-threads' and
	  'ede-serve-expired' options.

15 May 2022: George
	- Fix #678: [FR] modify behaviour of unbound-control rpz_enable zone,
	  by updating unbound-control's documentation.

12 May 2022: George
	- Fix #417: prefetch and ECS causing cache corruption when used
	  together.

12 May 2022: Wouter
	- Merge #677: Allow using system certificates not only on Windows,
	  from pemensik.
	- For #677: Added tls-system-cert to config parser and documentation.

11 May 2022: Wouter
	- Fix #673: DNS over TLS: error: SSL_handshake syscall: No route to
	  host.

10 May 2022: George
	- Fix Python build in non-source directory; based on patch by
	  Michael Tokarev.

6 May 2022: Tom
	- Merge PR #604: Add basic support for EDE (RFC8914).

28 April 2022: Wouter
	- Fix #670: SERVFAIL problems with unbound 1.15.0 running on
	  OpenBSD 7.1.

8 April 2022: Wouter
	- Fix zonemd check to allow unsupported algorithms to load.
	  If there are only unsupported algorithms, or unsupported schemes,
	  and no failed or successful other ZONEMD records, or malformed
	  or bad ZONEMD records, the unsupported records allow the zone load.
	- Fix zonemd unsupported algo check.
	- Fix zonemd unsupported algo check reason to not copy to next record,
	  and check for success for debug printout.